--- a/package.json
+++ b/package.json
@@ -24,18 +24,16 @@
     "build-storybook": "build-storybook -s ./public/static  -c .storybook -o .storybookout"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.5",
     "@apollo/react-components": "^4.0.0",
     "@apollo/react-hoc": "^4.0.0",
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/react-ssr": "^4.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@next/bundle-analyzer": "^9.4.4",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link-http": "^1.5.17",
-    "apollo-server-express": "^2.19.0",
     "classnames": "^2.2.6",
     "cross-env": "^5.2.1",
     "date-fns": "^2.16.1",
@@ -49,6 +47,7 @@
     "next": "^9.4.2",
     "next-compose-plugins": "^2.2.0",
     "next-i18next": "^4.2.1",
+    "next-plugin-graphql": "^0.0.2",
     "next-routes": "^1.4.2",
     "next-runtime-dotenv": "^1.2.0",
     "query-string": "^6.8.3",
