--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "webpack": "4.44.0"
   },
   "peerDependencies": {
-    "react-i18next": "^11.0.0"
+    "react-i18next": "^11.0.0",
+    "i18next": "^19.8.3"
   }
 }
