--- a/codegen.yaml
+++ b/codegen.yaml
@@ -1,5 +1,7 @@
 schema: 'src/graphql/schema.graphql'
-documents: 'src/components/**/*.graphql'
+documents:
+  - 'src/components/**/*.graphql'
+  - 'src/graphql/fragments/*.graphql'
 generates:
   src/graphql/__generated__/typescript-operations.ts:
     - typescript-operations
