- Show profile images

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PROXY_MODE=local
-API_URL=http://localhost:8081
+#API_URL=http://localhost:8081
+API_URL=https://michalkara.com
+USER_ICON_BASE=https://larpovadatabaze.cz
