- Fix comments loading

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PROXY_MODE=local
-#API_URL=http://localhost:8081
-API_URL=https://michalkara.com
+API_URL=http://localhost:8081
+#API_PATH=/CSLD-1.0.0/CSLD/graphql
+API_PATH=/CSLD_war/CSLD/graphql
 USER_ICON_BASE=https://larpovadatabaze.cz
