--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next-plugin-graphql": "^0.0.2",
     "next-routes": "^1.4.2",
     "next-runtime-dotenv": "^1.2.0",
+    "next-with-apollo": "^5.1.0",
     "query-string": "^6.8.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
