- Sign in - User menu - Recover password

--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@next/bundle-analyzer": "^9.4.4",
     "@zeit/next-css": "^1.0.1",
+    "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "cross-env": "^5.2.1",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "final-form": "^4.20.1",
     "graphql": "^15.4.0",
     "http-proxy-middleware": "^0.20.0",
     "isomorphic-unfetch": "^3.0.0",
@@ -54,7 +56,9 @@
     "next-with-apollo": "^5.1.0",
     "query-string": "^6.8.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.2",
     "react-jss": "^10.3.0",
     "react-stars": "^2.2.5"
   },
