- User creation - User settings update

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PROXY_MODE=local
 API_URL=http://localhost:8081
-#API_PATH=/CSLD-1.0.0/CSLD/graphql
 API_PATH=/CSLD_war/CSLD/graphql
-USER_ICON_BASE=https://larpovadatabaze.cz
+#USER_ICON_BASE=https://larpovadatabaze.cz
+USER_ICON_BASE=http://localhost:8081/CSLD_war/CSLD
+USER_ICON_PATH=/CSLD_war/CSLD/user-icon
+
