--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "react/prop-types": "off",
         "react/jsx-indent": [2, 4, { "checkAttributes": false }],
         "react/jsx-indent-props": [2, 4],
+        "react/jsx-one-expression-per-line": "off",
         "import/prefer-default-export": "off",
         "import/no-cycle": "off",
         "no-multi-assign": "off",
