--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@next/bundle-analyzer": "^9.4.4",
+    "@types/react-google-recaptcha": "^2.1.0",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
@@ -59,6 +60,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-jss": "^10.3.0",
     "react-stars": "^2.2.5"
   },
