--- a/codegen.yaml
+++ b/codegen.yaml
@@ -1,6 +1,7 @@
 schema: 'src/graphql/schema.graphql'
 documents:
   - 'src/components/**/*.graphql'
+  - 'src/hooks/**/*.graphql'
   - 'src/graphql/fragments/*.graphql'
 generates:
   src/graphql/__generated__/typescript-operations.ts:
