--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@next/bundle-analyzer": "^9.4.4",
+    "@types/draft-js": "^0.10.44",
+    "@types/draftjs-to-html": "^0.8.0",
+    "@types/html-to-draftjs": "1.4.0",
     "@types/react-google-recaptcha": "^2.1.0",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.3",
@@ -42,9 +45,13 @@
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
     "dotenv": "^8.2.0",
+    "draft-js": "^0.10.5",
+    "draft-js-buttons": "^2.0.2",
+    "draftjs-to-html": "^0.9.1",
     "express": "^4.17.1",
     "final-form": "^4.20.1",
     "graphql": "^15.4.0",
+    "html-to-draftjs": "1.4.0",
     "http-proxy-middleware": "^0.20.0",
     "isomorphic-unfetch": "^3.0.0",
     "jss-global": "^3.0.0",
