--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ PROXY_MODE=local
 API_URL=http://localhost:8081
 API_PATH=/CSLD_war/CSLD/graphql
 #USER_ICON_BASE=https://larpovadatabaze.cz
-USER_ICON_BASE=http://localhost:8081/CSLD_war/CSLD
 USER_ICON_PATH=/CSLD_war/CSLD/user-icon
+GAME_IMAGE_PATH=/CSLD_war/CSLD/game-image
 
