--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/draft-js": "^0.10.44",
     "@types/draftjs-to-html": "^0.8.0",
     "@types/html-to-draftjs": "1.4.0",
+    "@types/react-bootstrap-typeahead": "^5.1.0",
     "@types/react-google-recaptcha": "^2.1.0",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.3",
@@ -65,6 +66,7 @@
     "query-string": "^6.8.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.2",
     "react-google-recaptcha": "^2.1.0",
