--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "graphql": "^15.4.0",
     "html-to-draftjs": "1.4.0",
     "http-proxy-middleware": "^0.20.0",
+    "is-in-browser": "^1.1.3",
     "isomorphic-unfetch": "^3.0.0",
     "jss-global": "^3.0.0",
     "next": "^9.4.2",
