--- a/package.json
+++ b/package.json
@@ -101,34 +101,34 @@
     "@types/react-redux": "^7.1.2",
     "@types/redux-mock-store": "^1.0.1",
     "@types/testing-library__react": "^10.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.30.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "babel-eslint": "10.x",
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-react-app": "^9.1.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-airbnb-typescript": "^7.2.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-config-react-app": "^5.2.1",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-import-resolver-ts": "^0.4.2",
-    "eslint-import-resolver-typescript": "^1.1.1",
-    "eslint-plugin-flowtype": "3.x",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest-dom": "^2.1.0",
-    "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "1.x",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest-dom": "^3.6.5",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "fork-ts-checker-webpack-plugin": "^4.1.2",
     "i18next-xhr-backend": "^3.2.2",
     "jest": "^25.5.3",
     "nodemon": "^2.0.3",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "react-is": "16.8.0",
     "react-test-renderer": "^16.13.1",
     "redux-mock-store": "^1.5.3",
