--- a/package.json
+++ b/package.json
@@ -16,12 +16,22 @@
     "gen:schema": "graphql-codegen && prettier --write --config .prettierrc.js src/graphql/__generated__/*.{ts,tsx}",
     "lint": "eslint {src,pages,server}/**/* --ext .tsx,.ts",
     "pretty": "prettier --write --config .prettierrc.js {src,pages,server}/**/*.{ts,tsx}",
-    "format": "yarn lint -- --fix",
+    "format": "yarn lint --fix",
     "verify": "yarn lint && yarn test",
     "analyze": "cross-env BUNDLE_ANALYZE=both yarn build",
     "export": "cross-env NODE_ENV=production next export",
     "storybook": "start-storybook -s ./public/static -p 6006",
     "build-storybook": "build-storybook -s ./public/static  -c .storybook -o .storybookout"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
@@ -125,8 +135,10 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "fork-ts-checker-webpack-plugin": "^4.1.2",
+    "husky": "^4.3.6",
     "i18next-xhr-backend": "^3.2.2",
     "jest": "^25.5.3",
+    "lint-staged": "^10.5.3",
     "nodemon": "^2.0.3",
     "prettier": "^2.2.1",
     "react-is": "16.8.0",
