--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     ]
   },
   "dependencies": {
-    "@apollo/client": "^3.2.5",
     "@apollo/react-components": "^4.0.0",
     "@apollo/react-hoc": "^4.0.0",
     "@apollo/react-hooks": "^4.0.0",
@@ -44,6 +43,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@next/bundle-analyzer": "^9.4.4",
+    "@popperjs/core": "2.5.3",
     "@types/draft-js": "^0.10.44",
     "@types/draftjs-to-html": "^0.8.0",
     "@types/html-to-draftjs": "1.4.0",
@@ -64,8 +64,10 @@
     "graphql": "^15.4.0",
     "html-to-draftjs": "1.4.0",
     "http-proxy-middleware": "^0.20.0",
+    "immutable": "^3.7.6",
     "is-in-browser": "^1.1.3",
     "isomorphic-unfetch": "^3.0.0",
+    "jss": "^9.0.0",
     "jss-global": "^3.0.0",
     "next": "^9.4.2",
     "next-compose-plugins": "^2.2.0",
@@ -81,8 +83,7 @@
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.2",
     "react-google-recaptcha": "^2.1.0",
-    "react-jss": "^10.3.0",
-    "react-stars": "^2.2.5"
+    "react-jss": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
@@ -117,7 +118,6 @@
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-react-app": "^9.1.2",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -143,9 +143,7 @@
     "prettier": "^2.2.1",
     "react-is": "16.8.0",
     "react-test-renderer": "^16.13.1",
-    "redux-mock-store": "^1.5.3",
     "regenerator-runtime": "^0.13.7",
-    "styled-components": "^5.1.1",
     "ts-jest": "^25.4.0",
     "ts-loader": "^6.2.2",
     "ts-node": "^8.4.1",
@@ -154,6 +152,9 @@
   },
   "peerDependencies": {
     "i18next": "^19.8.3",
+    "jquery": "3.5.1",
+    "jss": "^9.0.0",
+    "popper.js": "^1.16.1",
     "react-i18next": "^11.0.0"
   }
 }
