--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.3.6",
     "@apollo/react-components": "^4.0.0",
     "@apollo/react-hoc": "^4.0.0",
     "@apollo/react-hooks": "^4.0.0",
