--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@types/classnames": "^2.2.11",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
+    "@types/gtag.js": "^0.0.4",
     "@types/jest": "^24.0.18",
     "@types/next-redux-wrapper": "^2.0.2",
     "@types/node": "^14.0.27",
