--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/draftjs-to-html": "^0.8.0",
     "@types/html-to-draftjs": "1.4.0",
     "@types/react-bootstrap-typeahead": "^5.1.0",
+    "@types/react-datepicker": "^3.1.2",
     "@types/react-google-recaptcha": "^2.1.0",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.3",
@@ -81,6 +82,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-typeahead": "^5.1.4",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.2",
     "react-google-recaptcha": "^2.1.0",
