Add dedicated iCal path to config

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ API_PATH=/CSLD_war/CSLD/graphql
 #USER_ICON_BASE=https://larpovadatabaze.cz
 USER_ICON_PATH=/CSLD_war/CSLD/user-icon
 GAME_IMAGE_PATH=/CSLD_war/CSLD/game-image
+ICAL_PATH=/CSLD_war/CSLD/ical
 NEXT_PUBLIC_GA_TRACKING_ID=UA-37900730-1
