--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PROXY_MODE=local
-API_URL=http://localhost:8081
-API_PATH=/CSLD_war/CSLD/graphql
+API_URL=https://larp-db-master.herokuapp.com
+API_PATH=/graphql
 #USER_ICON_BASE=https://larpovadatabaze.cz
-USER_ICON_PATH=/CSLD_war/CSLD/user-icon
-GAME_IMAGE_PATH=/CSLD_war/CSLD/game-image
-ICAL_PATH=/CSLD_war/CSLD/ical
+USER_ICON_PATH=/user-icon
+GAME_IMAGE_PATH=/game-image
+ICAL_PATH=/ical
 NEXT_PUBLIC_GA_TRACKING_ID=UA-37900730-1
