Load env variables based on environment we are running in

--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
+# Config for production
 PROXY_MODE=local
 API_URL=https://larp-db-master.herokuapp.com
 API_PATH=/graphql
-#USER_ICON_BASE=https://larpovadatabaze.cz
 USER_ICON_PATH=/user-icon
 GAME_IMAGE_PATH=/game-image
 ICAL_PATH=/ical
