Better OpenGraph metas v2

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,6 @@
 # Config for local dev
 PROXY_MODE=local
+SELF_URL=http://localhost:3000
 API_URL=http://localhost:8081
 API_PATH=/CSLD_war/CSLD/graphql
 USER_ICON_PATH=/CSLD_war/CSLD/user-icon
