--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,6 @@
 # Config for production
 PROXY_MODE=local
+SELF_URL=https://larpovadatabaze.cz
 API_URL=https://larp-db-master.herokuapp.com
 API_PATH=/graphql
 USER_ICON_PATH=/user-icon
