--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,8 @@ coverage
 # Dependency directories
 node_modules/
 
-# dotenv environment variables file
-# (currently in GIT for convenience reasons)
-# .env
+# Local dotenv environment variables file
+.env.local
 
 # build output
 .next
