--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "query-string": "^6.8.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-icons": "^1.4.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-datepicker": "^3.4.1",
     "react-dom": "^16.13.1",
