--- a/.env.dev.staging
+++ b/.env.dev.staging
@@ -6,4 +6,5 @@ API_PATH=/graphql
 USER_ICON_PATH=/user-icon
 GAME_IMAGE_PATH=/game-image
 ICAL_PATH=/ical
+CAL_SYNC_PATH=/cal-sync
 NEXT_PUBLIC_GA_TRACKING_ID=UA-37900730-1
